# GAI-summer-school-chatbot

./: .gitignore  README.md  pyproject.toml
config/: study_buddy.toml
eval/: RUBRIC.md  prompt_ratings.json
src/study_buddy/: __init__.py  __main__.py  app.py  chatbot.py
