[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "study-buddy-chatbot"
version = "0.1.0"
description = "A config-driven study buddy chatbot with persisted conversation memory."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"openai>=1.0.0",
	"python-dotenv>=1.0.1",
	"streamlit>=1.36.0",
]

[project.scripts]
study-buddy = "study_buddy.chatbot:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]